--- a/InvertedPendulum/LAFEM_Exp2.org
+++ b/InvertedPendulum/LAFEM_Exp2.org
@@ -101,7 +101,7 @@ int main( void ){
   gsl_matrix_free( D_expert );
   
   g_iMax_episode_len = 300;
-  D_expert = inverted_pendulum_simulator( 1 );
+  D_expert = inverted_pendulum_simulator( 10 );
   FILE* f = fopen("D_expert.mat","w");
   for( int i = 0; i < D_expert->size1 ; i++ ){
     for( int j = 0; j < TRANS_WIDTH; j++){
@@ -152,7 +152,6 @@ omega_expert.mat: LAFEM_Exp2_Expert.exe LAFEM_Exp2_Samples.dat
 #include "RL_Globals.h"
 #include "IRL_Globals.h"
 
-#define D_FILE_NAME "LAFEM_Exp2_Samples.dat"
 #define TRANS_WIDTH 7
 #define ACTION_FILE "actions.mat"
 
@@ -311,6 +310,9 @@ print a2str(omega_lafem)
 
 #+srcname: LAFEM_Exp2_make
 #+begin_src makefile
+LAFEM_Exp2.py: LAFEM_Exp2.org
+	$(call tangle,"LAFEM_Exp2.org")
+
 theta_lafem.mat: LAFEM_Exp2.py ../a2str.py ../LAFEM.py mu_E_Right.mat mu_E_Left.mat mu_E_None.mat D_expert.mat
 	python LAFEM_Exp2.py > theta_lafem.mat
 #+end_src
@@ -331,7 +333,6 @@ theta_lafem.mat: LAFEM_Exp2.py ../a2str.py ../LAFEM.py mu_E_Right.mat mu_E_Left.
 #define D_FILE_NAME "LAFEM_Exp2_Samples.dat"
 #define TRANS_WIDTH 7
 #define ACTION_FILE "actions.mat"
-#define LAFEM_REWARD_FILE "theta_lafem.mat"
 
 //FIXME : those are not useful here, but it won't compile without
 double g_dGamma_lafem = 0;
@@ -350,8 +351,14 @@ gsl_matrix* g_mActions = NULL;
 
 unsigned int g_iMax_episode_len = 3000;
 
-int main( void ){
-  gsl_matrix* theta_lafem = file2matrix( LAFEM_REWARD_FILE, 1 );
+int main (int argc, char *argv[]){
+  if (argc != 2){
+    printf("usage : %s <name of file with theta inside>\n (%d arguments given) ",argv[0],argc);
+    exit( 1 );
+  }
+  char* theta_file = argv[1];
+
+  gsl_matrix* theta_lafem = file2matrix( theta_file, 1 );
   gsl_matrix* D = file2matrix( D_FILE_NAME, TRANS_WIDTH );
   gsl_matrix* new_reward = gsl_matrix_alloc( 1, 1 );
   for( int i=0; i<D->size1; i++ ){
@@ -370,9 +377,9 @@ int main( void ){
   g_mOmega = omega_lafem;
   gsl_matrix* D_lafem = inverted_pendulum_simulator( 1 );
   fprintf(stderr,"Longueur d'un run de l'agent : %d\n",D_lafem->size1);
-  if( D_lafem->size1 < g_iMax_episode_len ){
-    return 1;
-  }
+  //if( D_lafem->size1 < g_iMax_episode_len ){
+  //  return 1;
+  //}
   gsl_matrix_free( D_lafem );
 
   gsl_matrix* omega_rand = gsl_matrix_alloc( g_iK, 1 );
@@ -393,7 +400,7 @@ int main( void ){
 #+srcname: LAFEM_Exp2_make
 #+begin_src makefile
 omega_lafem.mat: LAFEM_Exp2_Results.exe theta_lafem.mat
-	./LAFEM_Exp2_Results.exe > omega_lafem.mat
+	./LAFEM_Exp2_Results.exe theta_lafem.mat > omega_lafem.mat
 
 LAFEM_Exp2_Results.exe: LAFEM_Exp2_Results.o phipsi.o ../utils.o ../greedy.o  InvertedPendulum.o simulator.o ../LSPI.o ../LSTDQ.o
 	$(O2EXE) -o LAFEM_Exp2_Results.exe LAFEM_Exp2_Results.o phipsi.o ../utils.o ../greedy.o  InvertedPendulum.o  simulator.o ../LSPI.o ../LSTDQ.o
@@ -412,6 +419,7 @@ A piece of code to output the value in a correct format.
 #+begin_src c :tangle LAFEM_Exp2_Plot.c
 #define _POSIX_C_SOURCE 1
 #include <time.h>
+#include <string.h>
 #include <unistd.h>
 #include <gsl/gsl_matrix.h>
 #include <gsl/gsl_blas.h>
@@ -429,8 +437,6 @@ A piece of code to output the value in a correct format.
 #define P_MAX (PI)
 #define V_MIN (-PI)
 #define V_MAX (PI)
-#define LAFEM_REWARD_FILE "theta_lafem.mat"
-#define LAFEM_Q_FILE "omega_lafem.mat"
 #define EXPERT_Q_FILE "omega_expert.mat"
 
 unsigned int g_iS = 2;
@@ -440,7 +446,16 @@ gsl_matrix* g_mOmega = NULL;
 gsl_matrix* g_mActions = NULL; 
 
 
-int main( void ){
+int main (int argc, char *argv[]){
+  if (argc != 4){
+    printf("usage : %s <name of file with theta inside> <name of the file containing omega> <output files prefix>\n",argv[0]);
+    exit( 1 );
+  }
+  char* theta_file = argv[1];
+  char* omega_file = argv[2];
+  char* prefix = argv[3];
+  
+
   srand(time(NULL)+getpid()); rand(); rand();rand();
   g_mActions = file2matrix( ACTION_FILE, g_iA );
 
@@ -451,7 +466,7 @@ int main( void ){
   double V_agent[GRID_V_SIZE][GRID_P_SIZE];
 
 
-  gsl_matrix* theta_lafem = file2matrix( LAFEM_REWARD_FILE, 1 );
+  gsl_matrix* theta_lafem = file2matrix( theta_file, 1 );
   gsl_matrix* reward = gsl_matrix_alloc( 1, 1 );
   gsl_matrix* state = gsl_matrix_alloc( 1, 2 );
   for( int i=0; i<GRID_V_SIZE; i++ ){
@@ -504,7 +519,7 @@ int main( void ){
   }
   
   
-  gsl_matrix* omega_lafem = file2matrix( LAFEM_Q_FILE, 1 );
+  gsl_matrix* omega_lafem = file2matrix( omega_file, 1 );
   g_mOmega = omega_lafem;
   for( int i=0; i<GRID_V_SIZE; i++ ){
     double v = V_MIN + ((double)i)*( (V_MAX-V_MIN)/((double)GRID_V_SIZE - 1.) );
@@ -520,11 +535,21 @@ int main( void ){
       gsl_matrix_free( mPhi );
     }
   }
-  
-  FILE* f_true_R = fopen( "LAFEM_Exp2_true_R.dat", "w" );
-  FILE* f_lafem_R = fopen( "LAFEM_Exp2_lafem_R.dat", "w" );
-  FILE* f_V_expert = fopen( "LAFEM_Exp2_Vexpert.dat", "w" );
-  FILE* f_V_agent = fopen( "LAFEM_Exp2_Vagent.dat", "w" );
+
+
+
+  char* true_R_fn = malloc( strlen(prefix) + strlen("true_R.dat") + 1 );
+  char* lafem_R_fn = malloc( strlen(prefix) + strlen("lafem_R.dat") + 1 );
+  char* V_expert_fn = malloc( strlen(prefix) + strlen("Vexpert.dat") + 1 );
+  char* V_agent_fn = malloc( strlen(prefix) + strlen("Vagent.dat") + 1 );
+  sprintf( true_R_fn, "%s_true_R.dat", prefix );
+  sprintf( lafem_R_fn, "%s_lafem_R.dat", prefix );
+  sprintf( V_expert_fn, "%s_Vexpert.dat", prefix );
+  sprintf( V_agent_fn, "%s_Vagent.dat", prefix );
+  FILE* f_true_R = fopen( true_R_fn, "w" );
+  FILE* f_lafem_R = fopen( lafem_R_fn, "w" );
+  FILE* f_V_expert = fopen( V_expert_fn, "w" );
+  FILE* f_V_agent = fopen( V_agent_fn, "w" );
 
 
   for( int i=0; i<GRID_V_SIZE; i++ ){
@@ -551,22 +576,22 @@ The relevant makefile rules.
 
 #+srcname: LAFEM_Exp2_make
 #+begin_src makefile
-LAFEM_Exp2_true_R.mat: LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat theta_lafem.mat
-	./LAFEM_Exp2_Plot.exe
+LAFEM_Exp2_true_R.mat: LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat
+	./LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat LAFEM_Exp2
 
-LAFEM_Exp2_lafem_R.mat: LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat theta_lafem.mat
-	./LAFEM_Exp2_Plot.exe
+LAFEM_Exp2_lafem_R.mat: LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat 
+	./LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat LAFEM_Exp2
 
-LAFEM_Exp2_Vexpert.mat: LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat theta_lafem.mat
-	./LAFEM_Exp2_Plot.exe
+LAFEM_Exp2_Vexpert.mat: LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat
+	./LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat LAFEM_Exp2
 
-LAFEM_Exp2_Vagent.mat: LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat theta_lafem.mat
-	./LAFEM_Exp2_Plot.exe
+LAFEM_Exp2_Vagent.mat: LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat 
+	./LAFEM_Exp2_Plot.exe theta_lafem.mat omega_lafem.mat LAFEM_Exp2
 
 LAFEM_Exp2_Plot.exe: LAFEM_Exp2_Plot.o phipsi.o ../utils.o ../greedy.o phipsi.o
 	$(O2EXE) -o LAFEM_Exp2_Plot.exe LAFEM_Exp2_Plot.o phipsi.o ../utils.o ../greedy.o  
 
-LAFEM_Exp2_Plot.o: LAFEM_Exp2_Plot.c InvertedPendulum.h ../utils.h ../greedy.h ../RL_Globals.h phispi.h
+LAFEM_Exp2_Plot.o: LAFEM_Exp2_Plot.c InvertedPendulum.h ../utils.h ../greedy.h ../RL_Globals.h phipsi.h
 	$(call c2obj,"LAFEM_Exp2_Plot.c")
 
 LAFEM_Exp2_Plot.c: LAFEM_Exp2.org
